# toon

./: Cargo.toml  LICEENSE.md  LICENSE  README.md  STRUCTURE.md  examples.md
.github/workflows/: ci.yml
benches/: benchmark.rs
src/: cli.rs  decoder.rs  encoder.rs  lib.rs  main.rs
src/codec/: compact.rs  mod.rs  tabular.rs  text.rs
tests/: property.rs  roundtrip.rs  tabular.rs
