[package]
name = "toon"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["TOON Contributors"]
description = "A compact, lossless JSON encoding format"
license = "MIT OR Apache-2.0"
repository = "https://github.com/toon-format/toon"

[[bin]]
name = "toon"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
